# motion_suturo_1718

./: .travis.yml  README.md  acm.txt
02_code/catkin_ws/: CMakeLists.txt
02_code/catkin_ws/src/: main.cpp
02_code/catkin_ws/src/motion/: CMakeLists.txt  package.xml  package.xml~
02_code/catkin_ws/src/motion/action/: MovingCommand.action  MovingCommand.action~
02_code/catkin_ws/src/motion/launch/: launch_simulation.launch  launch_simulation.launch~
02_code/catkin_ws/src/motion/src/: main.cpp  main.cpp~
02_code/catkin_ws/src/motion_msgs/: CMakeLists.txt~
02_code/catkin_ws/src/pr2_moveit_generated/: .setup_assistant
02_code/catkin_ws/src/pr2_moveit_generated/config/: controllers.yaml  fake_controllers.yaml  ompl_planning.yaml  pr2.srdf
02_code/catkin_ws/src/pr2_moveit_generated/launch/: pr2_moveit_controller_manager.launch.xml
iai_pr2/: .setup_assistant  CMakeLists.txt  package.xml
iai_pr2/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf
iai_pr2/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motion/: CMakeLists.txt  CMakeLists.txt~  package.xml
motion/include/: ROSConnector.h  group_controller.h  motion_main_node.h  planning_scene.h  point_transformer.h  visualization_marker.h
motion/launch/: motion_main_start.launch  motion_main_start_real_pr2.launch
motion/src/: MoveGroupController.cpp  MoveGroupController.h  PlanningSceneController.cpp  PlanningSceneController.h  VisualizationMarkerPublisher.cpp  VisualizationMarkerPublisher.h  main.cpp  test_client.cpp  test_client_perceive_twice.cpp  test_client_perceive_twice_second.cpp
motion/src/factory/: MarkerFactory.cpp  MarkerFactory.h
motion/src/include/movegroup/: group_controller.h  group_controller.h~
motion/src/include/node/: motion_main_node.h
motion/src/include/planningscene/: planning_scene.h  planning_scene.h~
motion/src/include/transform/: point_transformer.h
motion/src/include/visualization/: visualization_marker.h
motion/src/movebase/: move_base.cpp
motion/src/movegroup/: group_controller.cpp
motion/src/moveit/: KitchenCollisionObjectService.cpp  KitchenCollisionObjectService.h
motion/src/node/: motion_main_node.cpp
motion/src/planningscene/: planning_scene.cpp
motion/src/publisher/: MarkerPublisher.cpp  MarkerPublisher.h
motion/src/transform/: FrameTransformer.cpp  FrameTransformer.h
motion/src/transformer/: point_transformer.cpp
motion/src/visualization/: visualization_marker.cpp
motion/test/: main_test.cpp  move_base_test.cpp  planning_scene_test.cpp  point_transformer_test.cpp  visualization_marker_test.cpp
motion_gripper/: CMakeLists.txt  package.xml
motion_gripper/include/: Gripper.h
motion_gripper/src/: Gripper.cpp  gripper_action_server.cpp  simple_gripper.cpp
motion_gripper/src/test/: test_gripper.cpp
motion_gripper/test/: gripper.test  gripper_test.cpp  grippertest.cpp  main.cpp
pr2_moveit_generated/: .setup_assistant  package.xml
pr2_moveit_generated/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf
pr2_moveit_generated/launch/: pr2_moveit_controller_manager.launch.xml
suturo_motion_main/: CMakeLists.txt  package.xml
suturo_motion_main/launch/: motion_main_start.launch  motion_main_start_real_pr2.launch
suturo_motion_main/src/: main.cpp
suturo_motion_main/src/include/movegroup/: group_controller.h
suturo_motion_main/src/include/node/: motion_main_node.h
suturo_motion_main/src/include/planningscene/: planning_scene.h
suturo_motion_main/src/include/transform/: point_transformer.h  point_transformer.h~
suturo_motion_main/src/include/visualization/: visualization_marker.h
suturo_motion_main/src/movegroup/: CMakeLists.txt  group_controller.cpp  group_controller.h
suturo_motion_main/src/node/: CMakeLists.txt  motion_main_node.cpp  motion_main_node.h
suturo_motion_main/src/planningscene/: planning_scene.cpp  planning_scene.h
suturo_motion_main/src/transformer/: CMakeLists.txt  point_transformer.cpp  point_transformer.h
suturo_motion_main/src/visualization/: visualization_marker.cpp  visualization_marker.h
