<?xml version="1.0"?>
<package format="2">
  <name>motion</name>
  <version>0.0.0</version>
  <description>The suturo_motion_main package</description>

  <maintainer email="menan@todo.todo">menan</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>iai_pr2</build_depend>
  <build_depend>knowledge_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>motion_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>iai_pr2</build_export_depend>
  <build_export_depend>knowledge_msgs</build_export_depend>
  <build_export_depend>motion_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>iai_pr2</exec_depend>
  <exec_depend>knowledge_msgs</exec_depend>
  <exec_depend>motion_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <depend>message_runtime</depend>
  <depend>marker_publisher</depend>
  <depend>pr2_controllers_msgs</depend> 
  <depend>motion_gripper</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <test_depend>gtest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
